--- a/WebContent/web/join_page.html
+++ b/WebContent/web/join_page.html
@@ -54,11 +54,17 @@
                 </div>
                 <div>
                     <label for="age">AGE</label>
-                    <input type="text" id='age' name='age' value="" >
+                    <input type="text" id='age' name='ag' value="" >
                 </div>
                 <div>
-                    <label for="gender" class="last_label">GENDER</label>
-                    <input type="text" id='gender' name='gender' value="" >
+                    <label for="gender" class="last_label">TEL</label>
+                   <div class=tel>
+                        <input type="text" id='gender' name='gender' value="" >
+                        <span>ㅡ</span>
+                        <input type="text" id='gender' name='gender' value="" >
+                        <span>ㅡ</span>
+                        <input type="text" id='gender' name='gender' value="" >
+                   </div>
                 </div>	
             </form>
 
