--- a/WebContent/web/index.html
+++ b/WebContent/web/index.html
@@ -24,14 +24,7 @@
     <!-- content  -->
     <div id="bk">
         <div class="menu_bar">
-            <ul>
-                <li><a href="my_page.html">oo님</a></li>
-                <li><a href="video.html">실시간 영상</a></li>
-                <li><a href="baby_life.html">육아생활</a></li>
-                <li><a href="statistic.html">통계</a></li>
-                <li><a href="history.html">History</a></li>
-                <li><a href="commu.html">커뮤니티</a></li>
-            </ul>
+             <%@ include file = "footer.jsp" %>
         </div>
         <!-- nav -->
         <div id="main_header">
