--- a/WebContent/web/commu_write.html
+++ b/WebContent/web/commu_write.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
-    <title>commu_write</title>
+    <title>commu_writes</title>
 </head>
 <body>
     <!-- content  -->
