--- a/WebContent/web/login_page.html
+++ b/WebContent/web/login_page.html
@@ -48,7 +48,10 @@
                     <label for="pw">PW</label>
                     <input type="text" id='pw' name='pw' value="" >
                 </div>
-                <input type="submit" value="Login" class="btn">
+                <div class="login_btn_box">
+                    <input type="submit" value="Join" class="btn">
+                    <input type="submit" value="Login" class="btn">
+                </div>
             </form>
 
         </div>
