--- a/WebContent/web/commu_write.html
+++ b/WebContent/web/commu_write.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
-    <title>commu_writes</title>
+    <title>commu_write</title>
 </head>
 <body>
     <!-- content  -->
@@ -48,7 +48,7 @@
                     </tr>
                     <tr>
                         <th>내용</th>
-                        <td><input type="text" name="content" class="td_write write_width"></td>
+                        <td><textarea name="content" class="td_write write_width"></textarea></td>
                     </tr>
                     <tr>
                         <th>공개여부</th>
