--- a/WebContent/commu.html
+++ b/WebContent/commu.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
-    <title>commu_write</title>
+    <script src="script/script_sh.js"></script>
+    <title>commu</title>
 </head>
 <body>
     <!-- content  -->
@@ -34,34 +35,37 @@
             <div class="right_icon"><a href="my_page.html"></a></div>
         </div>
         <!-- content -->
-        <div id="content" class="page commu commu_write">
-            <h1>게시글 등록</h1>
-            <form method="POST" action="BoardServlet">
-                <table class="write_radio">
+        <div id="content" class="page commu">
+            <h1>커뮤니티</h1>
+            <table>
+                <thead>
                     <tr>
+                        <th>번호</th>
                         <th>제목</th>
-                        <td><input type="text" name="title" class="write_width"></td>
+                        <th>작성자</th>
+                        <th>날짜</th>
+                        <th>조회수</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>1</th>
+                        <th>제목제목제목</th>
+                        <th>유유</th>
+                        <th>날짜날짜</th>
+                        <th>1</th>
                     </tr>
                     <tr>
-                        <th>이름</th>
-                        <td><input type="text" name="name" class="write_width"></td>
+                        <th>2</th>
+                        <th>제목제목제목</th>
+                        <th>유유</th>
+                        <th>날짜날짜</th>
+                        <th>1</th>
                     </tr>
-                    <tr>
-                        <th>내용</th>
-                        <td><textarea name="content" class="td_write write_width"></textarea></td>
-                    </tr>
-                    <tr>
-                        <th>공개여부</th>
-                        <td>
-                            	공개<input type="radio" name="password" vlaue="공개">&nbsp;&nbsp;  
-                            	비공개<input type="radio" name="password" vlaue="비공개">
-                        </td>
-                    </tr>
-                </table>
-                <br>
-                <input class="commu_btn commu_write_btn" type="submit" value="등록">
-                <input class="commu_btn commu_write_btn commu_write_btn2" type="reset" value="다시작성하기">
-            </form>
+                </tbody>
+            </table>
+            <br>
+            <a  href="commu_write.html" class="commu_btn">글쓰기</a>
         </div>
         <!-- footer -->
         <div id="footer">
