--- a/WebContent/commu_write.html
+++ b/WebContent/commu_write.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
+    <script src="script/script_sh.js"></script>
     <title>commu_write</title>
 </head>
 <body>
@@ -53,8 +54,8 @@
                     <tr>
                         <th>공개여부</th>
                         <td>
-                            	공개<input type="radio" name="password" vlaue="공개">&nbsp;&nbsp;  
-                            	비공개<input type="radio" name="password" vlaue="비공개">
+                            공개<input type="radio" name="password" vlaue="공개">&nbsp;&nbsp;  
+                            비공개<input type="radio" name="password" vlaue="비공개">
                         </td>
                     </tr>
                 </table>
