--- a/WebContent/history.html
+++ b/WebContent/history.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
-    <title>commu_write</title>
+    <script src="script/script_sh.js"></script>
+    <title>History</title>
 </head>
 <body>
     <!-- content  -->
@@ -34,34 +35,16 @@
             <div class="right_icon"><a href="my_page.html"></a></div>
         </div>
         <!-- content -->
-        <div id="content" class="page commu commu_write">
-            <h1>게시글 등록</h1>
-            <form method="POST" action="BoardServlet">
-                <table class="write_radio">
-                    <tr>
-                        <th>제목</th>
-                        <td><input type="text" name="title" class="write_width"></td>
-                    </tr>
-                    <tr>
-                        <th>이름</th>
-                        <td><input type="text" name="name" class="write_width"></td>
-                    </tr>
-                    <tr>
-                        <th>내용</th>
-                        <td><textarea name="content" class="td_write write_width"></textarea></td>
-                    </tr>
-                    <tr>
-                        <th>공개여부</th>
-                        <td>
-                            	공개<input type="radio" name="password" vlaue="공개">&nbsp;&nbsp;  
-                            	비공개<input type="radio" name="password" vlaue="비공개">
-                        </td>
-                    </tr>
-                </table>
-                <br>
-                <input class="commu_btn commu_write_btn" type="submit" value="등록">
-                <input class="commu_btn commu_write_btn commu_write_btn2" type="reset" value="다시작성하기">
-            </form>
+        <div id="content" class="page video_con">
+            <h1>History</h1>
+            <div class="alam">
+                <!-- 알람 팝업메세지 -->
+                <ul>
+                    <!-- icon_size: 30x30 -->
+                    <li><a class="alam_icon"></a>2020. 10.10 알람</li>
+                    <li><a class="alam_icon"></a>2020. 10.11 알람 </li>
+                </ul>
+            </div>
         </div>
         <!-- footer -->
         <div id="footer">
@@ -70,5 +53,4 @@
     </div>
 </body>
 </html>
-
 
