--- a/WebContent/join_baby_page.html
+++ b/WebContent/join_baby_page.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 여기 복사 -->
+    <!-- viewport,stylesheet -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/style.css">
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <!-- script -->
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
-    <title>commu_write</title>
+    <script src="script/script_sh.js"></script>
+    <!-- title명칭 수정할 것 -->
+    <title>join_baby_page</title>
 </head>
 <body>
     <!-- content  -->
@@ -34,33 +38,29 @@
             <div class="right_icon"><a href="my_page.html"></a></div>
         </div>
         <!-- content -->
-        <div id="content" class="page commu commu_write">
-            <h1>게시글 등록</h1>
-            <form method="POST" action="BoardServlet">
-                <table class="write_radio">
-                    <tr>
-                        <th>제목</th>
-                        <td><input type="text" name="title" class="write_width"></td>
-                    </tr>
-                    <tr>
-                        <th>이름</th>
-                        <td><input type="text" name="name" class="write_width"></td>
-                    </tr>
-                    <tr>
-                        <th>내용</th>
-                        <td><textarea name="content" class="td_write write_width"></textarea></td>
-                    </tr>
-                    <tr>
-                        <th>공개여부</th>
-                        <td>
-                            	공개<input type="radio" name="password" vlaue="공개">&nbsp;&nbsp;  
-                            	비공개<input type="radio" name="password" vlaue="비공개">
-                        </td>
-                    </tr>
-                </table>
-                <br>
-                <input class="commu_btn commu_write_btn" type="submit" value="등록">
-                <input class="commu_btn commu_write_btn commu_write_btn2" type="reset" value="다시작성하기">
+        <div id="content" class="page">
+            <h1> 우리아기 등록하기 </h1>
+            <form action="index.jsp" class="login_con join_con">
+                <div>
+                    <label for="name">NAME</label>
+                    <input type="text" id='baby_name' name='baby_name' value="" ><br/>
+                </div>
+                <div>
+                    <label for="age">BIRTH</label>
+                    <input type="date" id='baby_age' name='baby_age' value="" ><br/>
+                </div>
+                <div>
+                    <label for="gender">GENDER</label>
+                    <div class="baby_h3 baby_h3_top">
+                        <h3>남자 아이</h3>
+                        <input type="radio" id='baby_gender_man' name='baby_gender' value="남자">    
+                    </div>
+                    <div class="baby_h3">
+                        <h3>여자 아이</h3>
+                        <input type="radio" id='baby_gender_woman' name='baby_gender' value="여자">	
+                    </div>
+                </div>    
+                <input type="submit" value="Done" class="btn">
             </form>
         </div>
         <!-- footer -->
@@ -70,5 +70,3 @@
     </div>
 </body>
 </html>
-
-
