--- a/WebContent/join_page.html
+++ b/WebContent/join_page.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 여기 복사 -->
+    <!-- viewport,stylesheet -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/style.css">
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <!-- script -->
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
-    <title>commu_write</title>
+    <script src="script/script_sh.js"></script>
+    <!-- title명칭 수정할 것 -->
+    <title>join_page</title>
 </head>
 <body>
     <!-- content  -->
@@ -34,34 +38,40 @@
             <div class="right_icon"><a href="my_page.html"></a></div>
         </div>
         <!-- content -->
-        <div id="content" class="page commu commu_write">
-            <h1>게시글 등록</h1>
-            <form method="POST" action="BoardServlet">
-                <table class="write_radio">
-                    <tr>
-                        <th>제목</th>
-                        <td><input type="text" name="title" class="write_width"></td>
-                    </tr>
-                    <tr>
-                        <th>이름</th>
-                        <td><input type="text" name="name" class="write_width"></td>
-                    </tr>
-                    <tr>
-                        <th>내용</th>
-                        <td><textarea name="content" class="td_write write_width"></textarea></td>
-                    </tr>
-                    <tr>
-                        <th>공개여부</th>
-                        <td>
-                            	공개<input type="radio" name="password" vlaue="공개">&nbsp;&nbsp;  
-                            	비공개<input type="radio" name="password" vlaue="비공개">
-                        </td>
-                    </tr>
-                </table>
-                <br>
-                <input class="commu_btn commu_write_btn" type="submit" value="등록">
-                <input class="commu_btn commu_write_btn commu_write_btn2" type="reset" value="다시작성하기">
+        <div id="content" class="page">
+            <h1>Join</h1>
+            <form action="JoinServiceCon.do" method='post' class="login_con join_con">
+                <div>
+                    <label for="email">ID</label>
+                    <input type="text" id='email' name='email' value="" >
+                </div>	
+                <div>
+                    <label for="pw">PW</label>
+                    <input type="password" id='pw' name='pw' value="" >
+                </div>
+                <div>
+                    <label for="name">NAME</label>
+                    <input type="text" id='name' name='name' value="" >
+                </div>
+                <div>
+                    <label for="age">AGE</label>
+                    <input type="text" id='age' name='age' value="" >
+                </div>
+                <div>
+                    <label for="gender" class="last_label">TEL</label>
+                   <div class=tel>
+                        <input type="text" id='gender' name='gender' value="" >
+                        <span>ㅡ</span>
+                        <input type="text" id='gender' name='gender' value="" >
+                        <span>ㅡ</span>
+                        <input type="text" id='gender' name='gender' value="" >
+                   </div>
+                </div>	
             </form>
+
+            
+                <input type="submit" value="join" class="btn">
+         
         </div>
         <!-- footer -->
         <div id="footer">
@@ -70,5 +80,3 @@
     </div>
 </body>
 </html>
-
-
