--- a/WebContent/my_page.html
+++ b/WebContent/my_page.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
-    <title>commu_write</title>
+    <script src="script/script_sh.js"></script>
+    <title>my_page</title>
 </head>
 <body>
     <!-- content  -->
@@ -31,37 +32,47 @@
                 <div class="menu"><img src="../img/menu.png" width="50px"></div>
                 <a href="index.html" class="logo"><img src="../img/logo.png" width="150px"></a>
             </div>
-            <div class="right_icon"><a href="my_page.html"></a></div>
+            <div class="right_icon"><a href="login_page.html"></a></div>
         </div>
         <!-- content -->
-        <div id="content" class="page commu commu_write">
-            <h1>게시글 등록</h1>
-            <form method="POST" action="BoardServlet">
-                <table class="write_radio">
-                    <tr>
-                        <th>제목</th>
-                        <td><input type="text" name="title" class="write_width"></td>
-                    </tr>
-                    <tr>
-                        <th>이름</th>
-                        <td><input type="text" name="name" class="write_width"></td>
-                    </tr>
-                    <tr>
-                        <th>내용</th>
-                        <td><textarea name="content" class="td_write write_width"></textarea></td>
-                    </tr>
-                    <tr>
-                        <th>공개여부</th>
-                        <td>
-                            	공개<input type="radio" name="password" vlaue="공개">&nbsp;&nbsp;  
-                            	비공개<input type="radio" name="password" vlaue="비공개">
-                        </td>
-                    </tr>
-                </table>
-                <br>
-                <input class="commu_btn commu_write_btn" type="submit" value="등록">
-                <input class="commu_btn commu_write_btn commu_write_btn2" type="reset" value="다시작성하기">
+        <div id="content" class="page my_page">
+            <h1>My Page</h1>
+            <div class="my">
+                <h3>아기이름</h3>
+            </div>
+            <!--  -->
+            <!-- action 값 조율필요 -->
+            <!--  -->
+            <form action="index.jsp" class="login_con join_con">
+                <input type="submit" value="프로필수정" class="btn my_btn">
             </form>
+            <br>
+            <div class="my_baby">
+                <div>
+                    <h4>아기 기념일</h4>
+                    <h4><a href="#">더보기</a></h4>
+                </div>
+                <ul class="my_day">
+                    <li>D+50</li>
+                    <li>2020. 11. 23 (월)</li>
+                </ul>
+                <ul class="my_day">
+                    <li>D+100</li>
+                    <li>2020. 01. 12 (화)</li>
+                </ul>
+            </div>
+            <div class="mom">
+                <h4>양육자목록</h4>
+                <h5>양육자 이름쓰기</h5>
+            </div>
+            <!--  -->
+            <!-- action 값 조율필요 -->
+            <!--  -->
+        
+            <form action="join_baby_page.html" class="login_con join_con">
+                <input type="submit" value="아이추가" class="btn my_btn">
+            </form>
+            <div class="my_footer"></div>
         </div>
         <!-- footer -->
         <div id="footer">
@@ -70,5 +81,3 @@
     </div>
 </body>
 </html>
-
-
