--- a/WebContent/web/index.html
+++ b/WebContent/web/index.html
@@ -37,7 +37,8 @@
         <!-- content -->
         <div id="content">
             <div class="meno">
-    
+    			<div></div>
+    			<div></div>
             </div>
         </div>
         <!-- footer -->
