--- a/WebContent/web/commu.html
+++ b/WebContent/web/commu.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
+    <script src="script/script_sh.js"></script>
     <title>commu</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <li><a href="my_page.html"> oo님 </a></li>
                 <li><a href="video.html">실시간 영상</a></li>
                 <li><a href="baby_life.html">육아생활</a></li>
-                <li><a href="statistic .html">통계</a></li>
+                <li><a href="statistic.html">통계</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="commu.html">커뮤니티</a></li>
             </ul>
@@ -34,9 +35,37 @@
             <div class="right_icon"><a href="my_page.html"></a></div>
         </div>
         <!-- content -->
-        <div id="content" class="page video_con">
-            <h1>육아생활</h1>
-            
+        <div id="content" class="page commu">
+            <h1>커뮤니티</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <th>번호</th>
+                        <th>제목</th>
+                        <th>작성자</th>
+                        <th>날짜</th>
+                        <th>조회수</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>1</th>
+                        <th>제목제목제목</th>
+                        <th>유유</th>
+                        <th>날짜날짜</th>
+                        <th>1</th>
+                    </tr>
+                    <tr>
+                        <th>2</th>
+                        <th>제목제목제목</th>
+                        <th>유유</th>
+                        <th>날짜날짜</th>
+                        <th>1</th>
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+            <a  href="commu_write.html" class="commu_btn">글쓰기</a>
         </div>
         <!-- footer -->
         <div id="footer">
