--- a/WebContent/web/index_before.html
+++ b/WebContent/web/index_before.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 여기 복사 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/style.css">
     <!-- font -->
@@ -11,13 +10,19 @@
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
     <script src="script/script_sh.js"></script>
-    <!-- title명칭 수정할 것 -->
-    <title>mamiddo_login</title>
+    <title>mamiddo</title>
 </head>
 <body>
-    <!-- 복사 -->
-     <!-- content  -->
-     <div id="bk">
+    <!-- open -->
+    <div class="open">
+        <ul>
+            <li class="open1"></li>
+            <li class="open2"></li>
+            <li class="open3"></li>
+        </ul>
+    </div>
+    <!-- content  -->
+    <div id="bk">
         <div class="menu_bar">
             <ul>
                 <li><a href="my_page.html"> oo님 </a></li>
@@ -32,29 +37,19 @@
         <div id="main_header">
             <div class="left_icon">
                 <div class="menu"><img src="../img/menu.png" width="50px"></div>
-                <a href="index.html" class="logo"><img src="../img/logo.png" width="150px"></a>
+                <a href="#" class="logo"><img src="../img/logo.png" width="150px"></a>
             </div>
             <div class="right_icon"><a href="login_page.html"></a></div>
         </div>
         <!-- content -->
-        <div id="content" class="page">
-            <h1>Login</h1>
-            <!-- 내용넣는곳 -->
-            <form action="LoginServiceCon.do" class="login_con con">
-                <div>
-                    <label for="email">ID</label>
-                    <input type="text" id='email' name='email' value="" ><br/>
-                </div>
-                <div>
-                    <label for="pw">PW</label>
-                    <input type="text" id='pw' name='pw' value="" >
-                </div>
-                <div class="login_btn_box">
-                    <input type="submit" value="Join" class="btn">
-                    <input type="submit" value="Login" class="btn">
-                </div>
-            </form>
-
+        <div id="content" class="index_before_con index_con">
+            <div class="meno">
+                <!-- baby img --> 
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+            <h2>로그인이 필요합니다.</h2>
         </div>
         <!-- footer -->
         <div id="footer">
