--- a/WebContent/web/video.html
+++ b/WebContent/web/video.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
+    <script src="script/script_sh.js"></script>
     <title>video</title>
 </head>
 <body>
@@ -36,14 +37,14 @@
         <!-- content -->
         <div id="content" class="page video_con">
             <h1>실시간 영상</h1>
-            <form action="index.jsp">
+            <form action="viedeo2.html">
                 <div  class="video_input">
                     <label for="name">IP</label>
                     <input type="number" id='ip_num' name='ip_num' value="" >   
                 </div>
                 <input type="submit" value="입력" class="btn my_btn">
             </form>
-            <h4>ip주소를 등록해 주세요.</h4>
+            <h4>IP 주소를 등록해 주세요.</h4>
         </div>
         <!-- footer -->
         <div id="footer">
