--- a/WebContent/web/baby_life.html
+++ b/WebContent/web/baby_life.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
+    <script src="script/script_sh.js"></script>
     <title>baby_life</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <li><a href="my_page.html"> oo님 </a></li>
                 <li><a href="video.html">실시간 영상</a></li>
                 <li><a href="baby_life.html">육아생활</a></li>
-                <li><a href="statistic .html">통계</a></li>
+                <li><a href="statistic.html">통계</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="commu.html">커뮤니티</a></li>
             </ul>
@@ -28,21 +29,41 @@
         <!-- nav -->
         <div id="main_header">
             <div class="left_icon">
-                <div class="menu"><img src="../img/menu.png" width="50px"></div>
-                <a href="index.html" class="logo"><img src="../img/logo.png" width="150px"></a>
+                <div class="menu"><img src="/img/menu.png" width="50px"></div>
+                <a href="index.html" class="logo"><img src="/img/logo.png" width="150px"></a>
             </div>
             <div class="right_icon"><a href="my_page.html"></a></div>
         </div>
         <!-- content -->
         <div id="content" class="page video_con">
             <h1>육아생활</h1>
-            
+            <ul class="life_icon">
+                <li><img src="../img/life1.png" alt="" width="80px"></li>
+                <li><img src="../img/life2.png" alt="" width="80px"></li>
+                <li><img src="../img/life3.png" alt="" width="80px"></li>
+            </ul>
+            <div class="alam life_con">
+                <!-- 알람 팝업메세지 -->
+                <h4 id="date"></h4>
+                <ul class="life_list">
+                    <!-- icon_size: 30x30 -->
+                    <!-- <li class="life_remove">  
+                        <span>PM 1:00 식사</span> 
+                        <span class="test4"><a class="alam_icon"></a></span>
+                    </li> -->
+                </ul>
+            </div>
         </div>
         <!-- footer -->
         <div id="footer">
     
         </div>
     </div>
+    <script>
+        $(function(){
+        $.today()
+    });
+    </script>
 </body>
 </html>
 
