--- a/WebContent/web/commu_write.html
+++ b/WebContent/web/commu_write.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
+    <script src="script/script_sh.js"></script>
     <title>commu_write</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <li><a href="my_page.html"> oo님 </a></li>
                 <li><a href="video.html">실시간 영상</a></li>
                 <li><a href="baby_life.html">육아생활</a></li>
-                <li><a href="statistic .html">통계</a></li>
+                <li><a href="statistic.html">통계</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="commu.html">커뮤니티</a></li>
             </ul>
@@ -53,8 +54,8 @@
                     <tr>
                         <th>공개여부</th>
                         <td>
-                            	공개<input type="radio" name="password" vlaue="공개">&nbsp;&nbsp;  
-                            	비공개<input type="radio" name="password" vlaue="비공개">
+                            공개<input type="radio" name="password" vlaue="공개">&nbsp;&nbsp;  
+                            비공개<input type="radio" name="password" vlaue="비공개">
                         </td>
                     </tr>
                 </table>
