--- a/WebContent/web/history.html
+++ b/WebContent/web/history.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
+    <script src="script/script_sh.js"></script>
     <title>History</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <li><a href="my_page.html"> oo님 </a></li>
                 <li><a href="video.html">실시간 영상</a></li>
                 <li><a href="baby_life.html">육아생활</a></li>
-                <li><a href="statistic .html">통계</a></li>
+                <li><a href="statistic.html">통계</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="commu.html">커뮤니티</a></li>
             </ul>
@@ -35,8 +36,15 @@
         </div>
         <!-- content -->
         <div id="content" class="page video_con">
-            <h1>육아생활</h1>
-            
+            <h1>History</h1>
+            <div class="alam">
+                <!-- 알람 팝업메세지 -->
+                <ul>
+                    <!-- icon_size: 30x30 -->
+                    <li><a class="alam_icon"></a>2020. 10.10 알람</li>
+                    <li><a class="alam_icon"></a>2020. 10.11 알람 </li>
+                </ul>
+            </div>
         </div>
         <!-- footer -->
         <div id="footer">
