--- a/WebContent/web/index.html
+++ b/WebContent/web/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <script src="script/jquery-3.5.1.min.js"></script>
-    <script src="script/script.js"></script>
+    <script src="../script/jquery-3.5.1.min.js"></script>
+    <script src="../script/script.js"></script>
+    <script src="script/script_sh.js"></script>
     <title>mamiddo</title>
 </head>
 <body>
-
     <!-- open -->
     <div class="open">
         <ul>
@@ -24,7 +24,14 @@
     <!-- content  -->
     <div id="bk">
         <div class="menu_bar">
-             <%@ include file = "footer.jsp" %>
+            <ul>
+                <li><a href="my_page.html"> oo님 </a></li>
+                <li><a href="video.html">실시간 영상</a></li>
+                <li><a href="baby_life.html">육아생활</a></li>
+                <li><a href="statistic.html">통계</a></li>
+                <li><a href="history.html">History</a></li>
+                <li><a href="commu.html">커뮤니티</a></li>
+            </ul>
         </div>
         <!-- nav -->
         <div id="main_header">
@@ -35,10 +42,38 @@
             <div class="right_icon"><a href="login_page.html"></a></div>
         </div>
         <!-- content -->
-        <div id="content">
+        <div id="content" class="index_con">
             <div class="meno">
-    			<div></div>
-    			<div></div>
+                <!-- baby img -->
+                <div></div>
+                <div></div> 
+            </div>
+            <h2>아기이름</h2>
+            <div class="meno_con my_baby">
+                <h4>기념일</h4>
+                <ul class="my_day">
+                    <li>D+50</li>
+                    <li>2020. 11. 23 (월)</li>
+                </ul>
+                <ul class="my_day">
+                    <li>D+100</li>
+                    <li>2020. 01. 12 (화)</li>
+                </ul>
+            </div>
+            <div class="meno_con today">
+                <h4>Today List</h4>
+                <ul class="my_day">
+                    <li>식사</li>
+                    <li>n회</li>
+                </ul>
+                <ul class="my_day">
+                    <li>취침</li>
+                    <li>n회</li>
+                </ul>
+                <ul class="my_day">
+                    <li>배변</li>
+                    <li>n회</li>
+                </ul>
             </div>
         </div>
         <!-- footer -->
