--- a/WebContent/web/join_page.html
+++ b/WebContent/web/join_page.html
@@ -12,6 +12,7 @@
     <!-- script -->
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
+    <script src="script/script_sh.js"></script>
     <!-- title명칭 수정할 것 -->
     <title>join_page</title>
 </head>
@@ -23,7 +24,7 @@
                 <li><a href="my_page.html"> oo님 </a></li>
                 <li><a href="video.html">실시간 영상</a></li>
                 <li><a href="baby_life.html">육아생활</a></li>
-                <li><a href="statistic .html">통계</a></li>
+                <li><a href="statistic.html">통계</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="commu.html">커뮤니티</a></li>
             </ul>
@@ -54,7 +55,7 @@
                 </div>
                 <div>
                     <label for="age">AGE</label>
-                    <input type="text" id='age' name='ag' value="" >
+                    <input type="text" id='age' name='age' value="" >
                 </div>
                 <div>
                     <label for="gender" class="last_label">TEL</label>
