--- a/WebContent/web/my_page.html
+++ b/WebContent/web/my_page.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
+    <script src="script/script_sh.js"></script>
     <title>my_page</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <li><a href="my_page.html"> oo님 </a></li>
                 <li><a href="video.html">실시간 영상</a></li>
                 <li><a href="baby_life.html">육아생활</a></li>
-                <li><a href="statistic .html">통계</a></li>
+                <li><a href="statistic.html">통계</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="commu.html">커뮤니티</a></li>
             </ul>
@@ -31,7 +32,7 @@
                 <div class="menu"><img src="../img/menu.png" width="50px"></div>
                 <a href="index.html" class="logo"><img src="../img/logo.png" width="150px"></a>
             </div>
-            <div class="right_icon"><a href="my_page.html"></a></div>
+            <div class="right_icon"><a href="login_page.html"></a></div>
         </div>
         <!-- content -->
         <div id="content" class="page my_page">
@@ -68,9 +69,9 @@
             <!-- action 값 조율필요 -->
             <!--  -->
         
-            <!-- <form action="index.jsp" class="login_con join_con">
-                <input type="submit" value="아기 정보 수정" class="btn my_btn">
-            </form> -->
+            <form action="join_baby_page.html" class="login_con join_con">
+                <input type="submit" value="아이추가" class="btn my_btn">
+            </form>
             <div class="my_footer"></div>
         </div>
         <!-- footer -->
