--- a/WebContent/web/viedeo2.html
+++ b/WebContent/web/viedeo2.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
     <script src="script/script.js"></script>
-    <title>statistic</title>
+    <script src="script/script_sh.js"></script>
+    <title>video</title>
 </head>
 <body>
     <!-- content  -->
@@ -20,7 +21,7 @@
                 <li><a href="my_page.html"> oo님 </a></li>
                 <li><a href="video.html">실시간 영상</a></li>
                 <li><a href="baby_life.html">육아생활</a></li>
-                <li><a href="statistic .html">통계</a></li>
+                <li><a href="statistic.html">통계</a></li>
                 <li><a href="history.html">History</a></li>
                 <li><a href="commu.html">커뮤니티</a></li>
             </ul>
@@ -35,8 +36,13 @@
         </div>
         <!-- content -->
         <div id="content" class="page video_con">
-            <h1>육아생활</h1>
-            
+            <h1>실시간 영상</h1>
+            <div class="video_play">
+
+            </div>
+            <form action="index.jsp">
+                <input type="submit" value="녹화" class="btn my_btn">
+            </form>
         </div>
         <!-- footer -->
         <div id="footer">
@@ -45,4 +51,3 @@
     </div>
 </body>
 </html>
-
