--- a/WebContent/web/index.html
+++ b/WebContent/web/index.html
@@ -8,7 +8,7 @@
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
-    <script src="script/script.js"></script>
+    <script src="script/script_sh.js"></script>
     <title>mamiddo</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
     <!-- content  -->
     <div id="bk">
         <div class="menu_bar">
-             <%@ include file = "footer.jsp" %>
+             <%@ include file = "menu.jsp" %>
         </div>
         <!-- nav -->
         <div id="main_header">
