--- a/WebContent/web/login_page.html
+++ b/WebContent/web/login_page.html
@@ -9,7 +9,6 @@
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
-    <script src="script/script.js"></script>
     <script src="script/script_sh.js"></script>
     <!-- title명칭 수정할 것 -->
     <title>mamiddo_login</title>
@@ -50,7 +49,7 @@
                     <input type="text" id='pw' name='pw' value="" >
                 </div>
                 <div class="login_btn_box">
-                    <input type="submit" value="Join" class="btn">
+                    <a  href="join_page.html" class="btn">Join</a>
                     <input type="submit" value="Login" class="btn">
                 </div>
             </form>
