--- a/WebContent/web/statistic.html
+++ b/WebContent/web/statistic.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script type="text/javascript" src="http://www.gstatic.com/charts/loader.js"></script>
     <script src="script/jquery-3.5.1.min.js"></script>
-    <script src="script/script.js"></script>
+
     <script src="script/script_sh.js"></script>
     <title>statistic</title>
 </head>
@@ -41,7 +41,7 @@
             <ul>
                 <li>배변통계</li>
                 <li>수유통계</li>
-                <li>취침통계</li>
+                <li>숙면통계</li>
             </ul>
             <div class="chart">
               <div id="columnchart_material1" style="width: 30em; height: 20em;"></div>
