--- a/WebContent/my_page.html
+++ b/WebContent/my_page.html
@@ -15,27 +15,28 @@
 <body>
     <!-- content  -->
     <div id="bk">
-        <div class="menu_bar">
-            <ul>
-                <li><a href="my_page.html"> oo님 </a></li>
-                <li><a href="video.html">실시간 영상</a></li>
-                <li><a href="baby_life.html">육아생활</a></li>
-                <li><a href="statistic.html">통계</a></li>
-                <li><a href="history.html">History</a></li>
-                <li><a href="commu.html">커뮤니티</a></li>
-            </ul>
-        </div>
         <!-- nav -->
         <div id="main_header">
             <div class="left_icon">
-                <div class="menu"><img src="../img/menu.png" width="50px"></div>
-                <a href="index.html" class="logo"><img src="../img/logo.png" width="150px"></a>
+                <div class="menu"><img src="img/left_icon.png" width="50px"></div>
+                <a href="index.html" class="logo"><img src="img/sub_title2.png" width="100px"></a>
             </div>
-            <div class="right_icon"><a href="login_page.html"></a></div>
+            <div class="right_icon"><a href="index.html"></a></div>
+        </div>
+         <!-- bottom_nav -->
+         <div class="bottom_nav">
+            <ul>
+                <li><a href="statistic.html">통계</a></li>
+                <li><a href="baby_life.html">육아리듬</a></li>
+                <li><a href="commu.html">커뮤니티</a></li>
+            </ul>
         </div>
         <!-- content -->
+        <div class="life_title_box">
+            <a class="title"></a>
+            <h1>내 아이 성장기록</h1>
+        </div>
         <div id="content" class="page my_page">
-            <h1>My Page</h1>
             <div class="my">
                 <h3>아기이름</h3>
             </div>
@@ -100,11 +101,6 @@
                     <input type="submit" value="수정" class="btn my_btn">
                 </form>
             </div>
-        </div>
-
-        <!-- footer -->
-        <div id="footer">
-    
         </div>
     </div>
 </body>
