--- a/WebContent/viedeo2.html
+++ b/WebContent/viedeo2.html
@@ -16,29 +16,19 @@
 <body>
     <!-- content  -->
     <div id="bk">
-        <div class="menu_bar">
-            <ul>
-                <li><a href="my_page.html"> oo님 </a></li>
-                <li><a href="video.html">실시간 영상</a></li>
-                <li><a href="baby_life.html">육아생활</a></li>
-                <li><a href="statistic.html">통계</a></li>
-                <li><a href="history.html">History</a></li>
-                <li><a href="commu.html">커뮤니티</a></li>
-            </ul>
-        </div>
         <!-- nav -->
         <div id="main_header">
             <div class="left_icon">
-                <div class="menu"><img src="../img/menu.png" width="50px"></div>
-                <a href="index.html" class="logo"><img src="../img/logo.png" width="150px"></a>
+                <div class="menu"><img src="img/left_icon.png" width="50px"></div>
+                <a href="index.html" class="logo"><img src="img/sub_title2.png" width="100px"></a>
             </div>
-            <div class="right_icon"><a href="my_page.html"></a></div>
+            <div class="right_icon"><a href="login_page.html"></a></div>
         </div>
         <!-- content -->
         <div id="content" class="page video_con">
             <h1>실시간 영상</h1>
             <div class="video_play">
-
+                <img src="http://172.30.1.39:8081/" border="0" whidth="25%">
             </div>
             <form action="index.jsp">
                 <input type="submit" value="녹화" class="btn my_btn">
