--- a/WebContent/commu.html
+++ b/WebContent/commu.html
@@ -9,34 +9,34 @@
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="script/jquery-3.5.1.min.js"></script>
-    <script src="script/script.js"></script>
     <script src="script/script_sh.js"></script>
     <title>commu</title>
 </head>
 <body>
     <!-- content  -->
     <div id="bk">
-        <div class="menu_bar">
-            <ul>
-                <li><a href="my_page.html"> oo님 </a></li>
-                <li><a href="video.html">실시간 영상</a></li>
-                <li><a href="baby_life.html">육아생활</a></li>
-                <li><a href="statistic.html">통계</a></li>
-                <li><a href="history.html">History</a></li>
-                <li><a href="commu.html">커뮤니티</a></li>
-            </ul>
-        </div>
         <!-- nav -->
         <div id="main_header">
             <div class="left_icon">
-                <div class="menu"><img src="../img/menu.png" width="50px"></div>
-                <a href="index.html" class="logo"><img src="../img/logo.png" width="150px"></a>
+                <div class="menu"><img src="img/left_icon.png" width="50px"></div>
+                <a href="index.html" class="logo"><img src="img/sub_title2.png" width="100px"></a>
             </div>
             <div class="right_icon"><a href="my_page.html"></a></div>
         </div>
+        <!-- bottom_nav -->
+        <div class="bottom_nav">
+            <ul>
+                <li><a href="statistic.html">통계</a></li>
+                <li><a href="baby_life.html">육아리듬</a></li>
+                <li><a href="commu.html">커뮤니티</a></li>
+            </ul>
+        </div>
         <!-- content -->
-        <div id="content" class="page commu">
+        <div class="life_title">
+            <a class="title"></a>
             <h1>커뮤니티</h1>
+        </div>
+        <div id="content" class="page commu">
             <table>
                 <thead>
                     <tr>
