--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,42 +7,41 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <script src="script/jquery-3.5.1.min.js"></script>
-    <script src="../script/script.js"></script>
+    <script src="../script/jquery-3.5.1.min.js"></script>
     <script src="script/script_sh.js"></script>
     <title>mamiddo</title>
 </head>
 <body>
 
-    <!-- open -->
-    <div class="open">
-        <ul>
-            <li class="open1"></li>
-            <li class="open2"></li>
-            <li class="open3"></li>
-        </ul>
-    </div>
     <!-- content  -->
     <div id="bk">
-        <div class="menu_bar">
-             <%@ include file = "menu.jsp" %>
-        </div>
         <!-- nav -->
-        <div id="main_header">
+       <div id="main_header">
             <div class="left_icon">
-                <div class="menu"><img src="../img/menu.png" width="50px"></div>
-                <a href="#" class="logo"><img src="../img/logo.png" width="150px"></a>
+                <div class="menu"><img src="img/left_icon.png" width="50px"></div>
+                <a href="index.html" class="logo"><img src="img/sub_title2.png" width="100px"></a>
             </div>
-            <div class="right_icon"><a href="login_page.html"></a></div>
+            <div class="right_icon"><a href="my_page.html"></a></div>
+        </div>
+        <!-- bottom_nav -->
+        <div class="bottom_nav">
+            <ul>
+                <li><a href="statistic.html">통계</a></li>
+                <li><a href="baby_life.html">육아리듬</a></li>
+                <li><a href="commu.html">커뮤니티</a></li>
+            </ul>
         </div>
         <!-- content -->
         <div id="content" class="index_con">
             <div class="meno">
-     <!-- baby img -->
-                <div></div>
-                <div></div> 
+                <!-- 영상 부분 -->
+
+
+
             </div>
-            <h2>아기이름</h2>
+            <div class="main_alam">
+
+            </div>
             <div class="meno_con my_baby">
                 <h4>기념일</h4>
                 <ul class="my_day">
@@ -69,10 +68,6 @@
                     <li>n회</li>
                 </ul>
             </div>
-        </div>
-        <!-- footer -->
-        <div id="footer">
-    
         </div>
     </div>
 </body>
