--- a/WebContent/join_baby_page.html
+++ b/WebContent/join_baby_page.html
@@ -11,7 +11,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <!-- script -->
     <script src="script/jquery-3.5.1.min.js"></script>
-    <script src="script/script.js"></script>
     <script src="script/script_sh.js"></script>
     <!-- title명칭 수정할 것 -->
     <title>join_baby_page</title>
@@ -19,27 +18,20 @@
 <body>
     <!-- content  -->
     <div id="bk">
-        <div class="menu_bar">
-            <ul>
-                <li><a href="my_page.html"> oo님 </a></li>
-                <li><a href="video.html">실시간 영상</a></li>
-                <li><a href="baby_life.html">육아생활</a></li>
-                <li><a href="statistic.html">통계</a></li>
-                <li><a href="history.html">History</a></li>
-                <li><a href="commu.html">커뮤니티</a></li>
-            </ul>
+       <!-- nav -->
+       <div id="main_header">
+        <div class="left_icon">
+            <div class="menu"><img src="img/left_icon.png" width="50px"></div>
+            <a href="index.html" class="logo"><img src="img/sub_title2.png" width="100px"></a>
         </div>
-        <!-- nav -->
-        <div id="main_header">
-            <div class="left_icon">
-                <div class="menu"><img src="../img/menu.png" width="50px"></div>
-                <a href="index.html" class="logo"><img src="../img/logo.png" width="150px"></a>
-            </div>
-            <div class="right_icon"><a href="my_page.html"></a></div>
-        </div>
+        <div class="right_icon"><a href="login_page.html"></a></div>
+    </div>
         <!-- content -->
         <div id="content" class="page">
-            <h1> 우리아기 등록하기 </h1>
+            <div class="life_title">
+                <a class="title"></a>
+                <h1>아이 등록하기</h1>
+            </div>
             <form action="index.jsp" class="login_con join_con">
                 <div>
                     <label for="name">NAME</label>
