--- a/WebContent/login_page.html
+++ b/WebContent/login_page.html
@@ -28,7 +28,7 @@
                     </div>
                     <div>
                         <input type="submit" value="Login" class="btn">
-                        <a href="join_sh.html" class="btn a_btn">회원가입</a>
+                        <a href="join_page.html" class="btn a_btn">회원가입</a>
                     </div>
                 </form>
             </div>
