--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -35,38 +35,64 @@
         <div id="content" class="index_con">
             <div class="meno">
                 <!-- 영상 부분 -->
-
-
-
+                <a class="my_btn play_btn btn_color_linear">IP 입력이 필요합니다.</a>
             </div>
-            <div class="main_alam">
-
+            <div class="page">
+                <ul class="life_list index_alam">
+                    <li class="defecate">
+                        <a class="alam_left_p" id="index_red">위험</a>
+                        <spna>2020.10.17</spna>
+                        <spna class='meal_color'id="index_red2">위험 합니다.</spna>
+                    </li>
+                    <li class="defecate">
+                        <a class="alam_left_y">주의</a>
+                        <spna>2020.10.17</spna>
+                        <spna class='defecate_color'>주의가 필요 합니다.</spna>
+                    </li>
+                    <li class="defecate">
+                        <a class="alam_left_y" id="index_green">안전</a>
+                        <spna>2020.10.17</spna>
+                        <spna class='meal_color' id="index_green2">위험 합니다.</spna>
+                    </li>  
+                </ul>
+                <br>
+                <hr>
+                <div class="meno_con my_baby">
+                    <h4>기념일</h4>
+                    <ul class="my_day">
+                        <li>D+50</li>
+                        <li>2020. 11. 23 (월)</li>
+                    </ul>
+                    <ul class="my_day">
+                        <li>D+100</li>
+                        <li>2020. 01. 12 (화)</li>
+                    </ul>
+                </div>
+                <div class="meno_con today">
+                    <h4>Today List</h4>
+                    <ul class="my_day">
+                        <li>식사</li>
+                        <li>n회</li>
+                    </ul>
+                    <ul class="my_day">
+                        <li>취침</li>
+                        <li>n회</li>
+                    </ul>
+                    <ul class="my_day">
+                        <li>배변</li>
+                        <li>n회</li>
+                    </ul>
+                </div>
             </div>
-            <div class="meno_con my_baby">
-                <h4>기념일</h4>
-                <ul class="my_day">
-                    <li>D+50</li>
-                    <li>2020. 11. 23 (월)</li>
-                </ul>
-                <ul class="my_day">
-                    <li>D+100</li>
-                    <li>2020. 01. 12 (화)</li>
-                </ul>
-            </div>
-            <div class="meno_con today">
-                <h4>Today List</h4>
-                <ul class="my_day">
-                    <li>식사</li>
-                    <li>n회</li>
-                </ul>
-                <ul class="my_day">
-                    <li>취침</li>
-                    <li>n회</li>
-                </ul>
-                <ul class="my_day">
-                    <li>배변</li>
-                    <li>n회</li>
-                </ul>
+        </div>
+        <div class="pop_bg pop_ip_box">
+            <div>
+                <form action="">
+                    <div>
+                        <input type="text" value="" class="pop_con1 pop_ip" placeholder="IP 입력이 필요합니다.">
+                    </div>
+                    <input type="submit" value="전송" class="btn my_btn btn_color">
+                </form>
             </div>
         </div>
     </div>
