--- a/WebContent/my_page.html
+++ b/WebContent/my_page.html
@@ -44,7 +44,7 @@
             <!-- action 값 조율필요 -->
             <!--  -->
             <form action="index.jsp" class="login_con join_con">
-                <input type="submit" value="프로필수정" class="btn my_btn">
+                <input type="submit" value="프로필수정" class="btn my_btn btn_color_linear">
             </form>
             <div class="my_baby">
                 <div class="my_day">
@@ -82,7 +82,7 @@
             <!-- action 값 조율필요 -->
             <!--  -->
             <form action="join_baby_page.html" class="login_con join_con">
-                <input type="submit" value="아이추가" class="btn my_btn">
+                <input type="submit" value="아이추가" class="btn my_btn btn_color_linear">
             </form>
             <div class="my_footer"></div>
         </div>
@@ -98,7 +98,7 @@
                         <label for="email">몸무게(Kg)</label>
                         <input type="text" value="0" class="pop_con2">
                     </div>
-                    <input type="submit" value="수정" class="btn my_btn">
+                    <input type="submit" value="수정" id="btn2"class="btn my_btn btn_color">
                 </form>
             </div>
         </div>
