--- a/WebContent/baby_life.html
+++ b/WebContent/baby_life.html
@@ -39,9 +39,9 @@
                     <h1>육아리듬 체크</h1>
                 </div>
                 <ul class="life_icon">
-                <li><img src="../img/new_life1.png" alt="" width="80px"></li>
-                <li><img src="../img/new_life2.png" alt="" width="80px"></li>
-                <li><img src="../img/new_life3.png" alt="" width="80px"></li>
+                <li><img src="/img/new_life1.png" alt="" width="80px"></li>
+                <li><img src="/img/new_life2.png" alt="" width="80px"></li>
+                <li><img src="/img/new_life3.png" alt="" width="80px"></li>
             </ul>
             </div>
             <div class="alam life_con page">
