--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -47,12 +47,12 @@
                     <li class="defecate">
                         <a class="alam_left_y">주의</a>
                         <spna>2020.10.17</spna>
-                        <spna class='defecate_color'>주의가 필요 합니다.</spna>
+                        <spna class='sleep_color'>주의가 필요 합니다.</spna>
                     </li>
                     <li class="defecate">
                         <a class="alam_left_y" id="index_green">안전</a>
                         <spna>2020.10.17</spna>
-                        <spna class='meal_color' id="index_green2">위험 합니다.</spna>
+                        <spna class='meal_color' id="index_green2">안전 합니다.</spna>
                     </li>  
                 </ul>
                 <br>
