--- a/WebContent/my_page.html
+++ b/WebContent/my_page.html
@@ -21,7 +21,7 @@
                 <div class="menu"><img src="img/left_icon.png" width="50px"></div>
                 <a href="index.html" class="logo"><img src="img/sub_title2.png" width="100px"></a>
             </div>
-            <div class="right_icon"><a href="index.html"></a></div>
+            <div class="home"><a href="index.html"></a></div>
         </div>
          <!-- bottom_nav -->
          <div class="bottom_nav">
@@ -35,6 +35,7 @@
         <div class="life_title_box">
             <a class="title"></a>
             <h1>내 아이 성장기록</h1>
+            <div class="photo"><img src="img/photo.png" width="150px"></div>
         </div>
         <div id="content" class="page my_page">
             <div class="my">
