--- a/WebContent/statistic.html
+++ b/WebContent/statistic.html
@@ -36,6 +36,7 @@
         <div class="life_title">
           <a class="title"></a>
           <h1>우리아이 통계</h1>
+          <hr id="move">
         </div>
         <div id="content" class="page statistic">
             <ul>
