--- a/WebContent/baby_life.html
+++ b/WebContent/baby_life.html
@@ -38,6 +38,7 @@
                 <div>
                     <a class="title"></a>
                     <h1>육아리듬 체크</h1>
+                    <hr class="life_hr">
                 </div>
                 <ul class="life_icon">
                 <li><img src="/img/new_life1.png" alt="" width="80px"></li>
