--- a/WebContent/commu.html
+++ b/WebContent/commu.html
@@ -34,10 +34,20 @@
         <!-- content -->
         <div class="life_title">
             <a class="title"></a>
-            <h1>커뮤니티</h1>
-         
+            <h1>커뮤니티 게시판</h1>
         </div>
+        <hr class="life_hr commu_hr">
         <div id="content" class="page commu">
+            <div id="search">
+                <form action="">
+                    <select name="">
+                        <option value="제목">제목</option>
+                        <option value="작성자">작성자</option>
+                    </select>
+                    <input type="search">
+                    <input type="submit">
+                </form>
+            </div>
             <table class="commu_table">
                 <thead>
                     <tr>
@@ -61,7 +71,8 @@
                         <td><a href="#">제목적는 부분</a></td>
                         <td>호랭이</td>
                         <td>2020.10.17</td>
-                    </tr>   
+                    </tr>
+                   
                 </tbody>
             </table>
             <br>
