--- a/WebContent/login_sh.html
+++ b/WebContent/login_sh.html
@@ -36,6 +36,14 @@
                 </form>
             </div>
         </div>
+        <div id="footer" class="ft_height">
+            <span>(주) Future I Zation</span>
+            <br>
+            <br>
+            <span>만든 사람들</span>
+            <br>
+            <spna>강다훈, 이태민, 최웅식, 조규범, 정세희</spna>
+        </div>
     </div>
 </body>
 </html>
