--- a/WebContent/commu.html
+++ b/WebContent/commu.html
@@ -48,7 +48,7 @@
                     <input type="submit">
                 </form>
             </div>
-            <table class="commu_table">
+            <table class="commu_table" id='content'>
                 <thead>
                     <tr>
                         <th>제목</th>
