--- a/WebContent/baby_life.html
+++ b/WebContent/baby_life.html
@@ -92,9 +92,9 @@
                 <forms>
                     <label>시작시간</label>
                     <input type="time" name="time" value=""><br>
-                    <label>끝시간</label>
+                    <label class="sleep_lb">끝시간</label>
                     <input type="time" name="time" value="">
-                    <input type="submit" value="입력" class="btn btn_color_linear">
+                    <input type="submit" value="입력" class="btn btn_color_linear" id="sleep_btn">
                 </forms>
             </div>
         </div>
