--- a/WebContent/commu.html
+++ b/WebContent/commu.html
@@ -53,20 +53,21 @@
                     <tr>
                         <td>
                             <a href="#">[제목] 마미또 이용 후기</a>  <!--제목을 클릭하면 내용이 보여져야함 -->
-                            <spna>
-                                <a class="sub_title">2020.10.17</a>
-                                <a class="sub_title sc_sub">호랑이 맘</a>
-                            </spna>  
+                            <span>
+                                <a class="sub_title">호랑이 맘</a>
+                                <a class="sub_title sc_sub">2020.10.17</a>
+                            </span> 
+                            <span class="num"> 조회수 1</span> 
                         </td>     
                     </tr>
                     <!-- 여기까지 한줄 -->
                     <tr>
                         <td>
                             <a href="#">[제목] 마미또 이용 후기</a>  <!--제목을 클릭하면 내용이 보여져야함 -->
-                            <spna>
-                                <a class="sub_title">2020.10.17</a>
+                            <span>
                                 <a class="sub_title sc_sub">호랑이 맘</a>
-                            </spna>  
+                                <a class="sub_title">2020.10.17</a>
+                            </span>  
                         </td>     
                     </tr>
                    
