--- a/WebContent/commu.html
+++ b/WebContent/commu.html
@@ -57,7 +57,7 @@
                                 <a class="sub_title">호랑이 맘</a>
                                 <a class="sub_title sc_sub">2020.10.17</a>
                             </span> 
-                            <span class="num"> 조회수 1</span> 
+                            <span class="num"></span> 
                         </td>     
                     </tr>
                     <!-- 여기까지 한줄 -->
